fix scrollbar on main container and playlists list container on sidemenu

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -67,3 +67,19 @@ span {
   font-size: 14px;
   font-family: 'Circular Book';
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #999;
+}
